<resources>
    <string name="app_name">시시콜콜</string>
    <string name="facebook_app_id">110001590897403</string>
    <string name="fb_login_protocol_scheme">fb110001590897403</string>
    <string name="login_sub_title">당신만을 위한</string>
    <string name="login_main_title">주류 큐레이팅 서비스</string>

    <string name="sort_popular">인기순</string>
    <string name="sort_review">리뷰많은순</string>
    <string name="sort_favorite">찜한순</string>
    <string name="sort_abv">도수높은순</string>
    <string name="sort_price_desc">가격높은순</string>
    <string name="sort_price_asc">가격낮은순</string>
    <string name="sort_time">최신순</string>
    <string name="sort_recommend">추천순</string>
    <string name="sort_star">평점높은순</string>


    <string name="category_all">전체</string>
    <string name="category_liquor">양주</string>
    <string name="category_wine">와인</string>
    <string name="category_beer">세계맥주</string>
    <string name="search_et_hint">술 종류, 이름</string>
    <string name="all_search">검색</string>
    <string name="all_recommend">추천</string>
    <string name="all_record">기록</string>
    <string name="all_cupboard">장식장</string>
    <string name="all_my_review">내 기록</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrs standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="all_date">날짜</string>
    <string name="all_location">장소</string>
    <string name="all_drink_capacity">마신 주량</string>
    <string name="all_hangover">숙취</string>
    <string name="all_price">가격</string>
    <string name="all_abv">도수</string>
    <string name="all_carbonated">탄산</string>
    <string name="all_liquor">양주</string>
    <string name="all_wine">와인</string>
    <string name="all_beer">맥주</string>
    <string name="all_type">종류</string>
    <string name="all_flavor">맛</string>
    <string name="all_place">장소</string>
    <string name="all_wine_body">바디감</string>
    <string name="all_licence">라이선스</string>
    <string name="all_logout">로그아웃</string>
    <string name="all_witdraw">회원탈퇴</string>


    <string name="hangover_none">없음</string>
    <string name="hangover_heavy">심함</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_private">비공개</string>
    <string name="register2">주량과 숙취 정보를 입력하면 추천과\n통계 부분에 적용됩니다!</string>
    <string name="first_input_drink_type_title">추천받고 싶은 주종을\n선택해주세요.</string>
    <string name="first_input_drink_type_subtitle">주종은 중복 선택 가능합니다.</string>
    <string name="first_input_detail_title">추천을 위한 세부 사항을\n입력해 주세요!</string>
    <string name="first_input_detail_subtitle">기본 정보는 전체 주종에 일괄적으로 적용되며,\n선택 정보는 각 주종에 대해 적용됩니다.</string>
    <string name="all_next">다음</string>
    <string name="first_input_default_info">기본 정보</string>
    <string name="first_input_select_info">선택 정보</string>
    <string name="first_input_select_info_sub">옵션 미선택 / 중복 선택 가능</string>


    <string name="record_delete">삭제하기</string>
    <string name="record_select_all">전체 선택</string>
</resources>