<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/first_input_default_padding"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/FirstInputStyle.Page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/3" />

        <TextView
            style="@style/FirstInputStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_input_drink_type_title" />

        <TextView
            style="@style/FirstInputStyle.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_input_drink_type_subtitle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_liquor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/layout_wine"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_liquor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_liquor" />

        <TextView
            android:id="@+id/tv_liquor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="양주"
            android:textColor="@drawable/color_selectable_blue" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_wine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_wine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wine" />

        <TextView
            android:id="@+id/tv_wine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="와인"
            android:textColor="@drawable/color_selectable_yellow" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_beer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/layout_wine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_beer" />

        <TextView
            android:id="@+id/tv_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="맥주"
            android:textColor="@drawable/color_selectable_orange" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_next"
        android:paddingVertical="16.5dp"
        android:text="@string/all_next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
